[gd_scene load_steps=2 format=3 uid="uid://b360vkyso2uy"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_t7lnq"]

[node name="MainMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_t7lnq")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="RichTextLabel" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -188.0
offset_top = 50.0
offset_right = 188.0
offset_bottom = 113.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 45
text = "Platformer Demo"
fit_content = true
autowrap_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.5
offset_top = -50.5
offset_right = 49.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="Continue" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Continue"

[node name="SelectLevel" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Select Level"

[node name="Quit" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit Game"

[connection signal="pressed" from="Control/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/SelectLevel" to="." method="_on_select_level_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
